--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
     name: Build 3D Profile
     steps:
       - uses: actions/checkout@v4
-      - uses: yoshi389111/github-profile-3d-contrib@v1.3.1
+      - uses: yoshi389111/github-profile-3d-contrib@0.9.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           github_username: AIMaster17
