--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,5 @@ jobs:
     name: Build 3D Profile
     steps:
       - uses: actions/checkout@v4
-      - uses: yoshi389111/github-profile-3d-contrib@0.7.2
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          github_username: AIMaster17
-          outputs_branch: main
+      - name: Run 3D Contrib Action
+        uses: yoshi389111/github-profile-3d-contrib@0.9.0
