--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,26 +2,26 @@ name: GitHub 3D Profile
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 */12 * * *"
   workflow_dispatch:
-
-permissions:
-  contents: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Build 3D Profile
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Run 3D Contrib Action
+      - name: Generate 3D contribution graph
         uses: yoshi389111/github-profile-3d-contrib@0.9.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
-          COMMIT_USERNAME: ${{ github.actor }}
-          COMMIT_EMAIL: ${{ github.actor }}@users.noreply.github.com
 
-      - name: List files for debugging
-        run: ls -R
+      - name: Commit and push changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "chore: Update 3D contribution graph"
+          file_pattern: profile-3d-contrib/*.svg
